--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
    margin: 0;
    padding: 0;
    overflow-x: hidden;
+   font-family: Roboto;
 }
 
 /* Designing for scroll-bar */
@@ -101,7 +102,7 @@ h2 {
 }
 
 .title {
-   padding: 48px 0;
+   padding: 48px 0 24px;
    overflow: hidden;
    /* line-height: 75px; */
 }
@@ -116,7 +117,7 @@ h2 {
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
-   margin: 100px 0;
+   margin-bottom: 100px;
 }
 
 .reverse {
@@ -270,10 +271,122 @@ hr {
    justify-content: space-around;
 }
 
+.mySlides {
+   display: none;
+}
+
+/* Slideshow container */
+.hygiene {
+   max-width: 1000px;
+   max-height: 50vh;
+   position: relative;
+   margin: auto;
+   overflow: hidden;
+   border: 1px solid rgba(0, 0, 0, 0.548);
+   border-radius: 20px;
+   margin-bottom: 36px;
+   transition: 1s;
+}
+
+.hygiene img {
+   vertical-align: middle;
+   max-height: 50vh;
+   width: auto;
+   object-fit: contain;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+   cursor: pointer;
+   position: absolute;
+   top: 50%;
+   width: auto;
+   padding: 16px;
+   margin-top: -22px;
+   color: white;
+   font-weight: bold;
+   font-size: 18px;
+   transition: 0.6s ease;
+   border-radius: 0 3px 3px 0;
+   user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+   right: 0;
+   border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+   background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+   color: #f2f2f2;
+   font-size: 15px;
+   padding: 16px 0px;
+   position: absolute;
+   bottom: 0px;
+   width: 100%;
+   text-align: center;
+   background-color: rgba(0, 0, 0, 0.459);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+   color: #f2f2f2;
+   font-size: 12px;
+   padding: 8px 12px;
+   position: absolute;
+   top: 0;
+}
+
+/* Fading animation */
+.fade {
+   -webkit-animation-name: fade;
+   -webkit-animation-duration: 1.5s;
+   animation-name: fade;
+   animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+   from {
+      opacity: 0.4;
+   }
+   to {
+      opacity: 1;
+   }
+}
+
+@keyframes fade {
+   from {
+      opacity: 0.4;
+   }
+   to {
+      opacity: 1;
+   }
+}
+
 @media (max-width: 1024px) {
    .main-container {
       background-size: 35%, 35%, cover;
       background-position: left 0 top 0, right 0 bottom -70px, left 50% top 50%;
+   }
+
+   .special-info {
+      flex-direction: column;
+      align-items: center;
+      overflow: visible;
+   }
+
+   .special-info .delivery,
+   .special-info .payment {
+      width: 90%;
+      margin-bottom: 36px;
    }
 
    .product {
@@ -297,6 +410,10 @@ hr {
       font-size: 18px;
    }
 
+   .text-container h5 {
+      font-size: 14px;
+   }
+
    hr {
       width: 60%;
    }
@@ -307,10 +424,20 @@ hr {
       flex-direction: column;
    }
 
+   .sabores-container {
+      flex-direction: column;
+   }
+
+   .sabores-container .product img,
    .product img {
       height: auto;
       width: 100%;
       margin-bottom: 24px;
+   }
+
+   .hygiene,
+   .hygiene img {
+      max-height: 80vh;
    }
 }
 
@@ -319,12 +446,25 @@ hr {
       padding: 0 10% 40px 10%;
    }
 
+   .title {
+      padding-top: 18px;
+      font-size: 48px;
+   }
+
    .text-container h3 {
       font-size: 20px;
    }
 
    .text-container h4 {
       font-size: 18px;
+   }
+
+   .sabores-container .product {
+      margin-top: 0px;
+   }
+
+   .product {
+      margin-top: 0px;
    }
 }
 
