--- a/styles.css
+++ b/styles.css
@@ -223,6 +223,7 @@ hr {
    padding: 20px 15% 40px;
    align-items: center;
    justify-content: center;
+   overflow: hidden;
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
 
