--- a/styles.css
+++ b/styles.css
@@ -12,19 +12,19 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-   background: #2b1111;
+   background: #223c47;
    /* border-radius: 5px;  */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-   background: rgb(180, 0, 0);
+   background: #8ebed4;
    border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-   background: rgba(255, 0, 0, 0.301);
+   background: #496775;
 }
 
 .author {
@@ -33,11 +33,11 @@
 
 .author a {
    margin-bottom: 40px;
-   color: rgb(184, 20, 20);
+   color: #658da0;
 }
 
 .main-container {
-   background-color: #7e2323;
+   background-color: #003550;
    display: flex;
    flex-direction: column;
    height: 100vh;
@@ -80,7 +80,7 @@ h2 {
    /* margin-bottom: 48px; */
    width: 310px;
 
-   background: #b72020;
+   background: #658da0;
 }
 
 .social-media {
@@ -216,7 +216,7 @@ hr {
 .additional-info {
    display: flex;
    flex-direction: column;
-   background-color: #b72020;
+   background-color: #658da0;
    font-family: Roboto;
    font-weight: normal;
    color: white;
