--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
 }
 
 .author {
-   color: white;
+   color: black;
 }
 
 .author a {
@@ -108,9 +108,13 @@ h2 {
 }
 
 .catalogo-container {
-   background-color: #1f1f1f;
+   background-color: #d3d3d3;
    padding: 0 15%;
    overflow: hidden;
+}
+
+.catalogo-container .title {
+   color: black;
 }
 
 .product {
@@ -128,8 +132,8 @@ h2 {
 .product img {
    height: 100%;
    width: 50%;
-   margin: 0 18px;
-   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
+   margin: 0 18px 8px;
+   filter: drop-shadow(0px 4px 4px rgba(85, 85, 85, 0.5));
 }
 
 .product .text-container {
@@ -148,9 +152,9 @@ h2 {
    /* line-height: 56px; */
    text-align: center;
 
-   color: #ffffff;
+   color: #000;
 
-   text-shadow: -2px 3px 0px #000000;
+   text-shadow: -2px 3px 0px #fff;
 }
 
 .text-container h4 {
@@ -160,7 +164,7 @@ h2 {
    font-size: 36px;
    /* line-height: 56px; */
    /* text-align: center; */
-   color: #ffffff;
+   color: #000;
 }
 
 .text-container h5 {
@@ -251,18 +255,18 @@ hr {
    overflow: visible;
 }
 
-.special-info .delivery {
+.special-info .delivery,
+.special-info .payment {
    display: flex;
    flex-direction: column;
    width: 45%;
-   background-color: rgb(34, 34, 34);
-   border: 1px solid rgb(49, 49, 49);
+   background-color: #cacaca;
    border-radius: 50px;
    margin: 0 18px;
    padding: 0 30px 30px;
    font-family: Roboto;
    font-weight: normal;
-   color: white;
+   color: black;
 
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
 }
@@ -288,22 +292,6 @@ li h3 {
    font-weight: normal;
 }
 
-.special-info .payment {
-   display: flex;
-   flex-direction: column;
-   width: 45%;
-   background-color: rgb(34, 34, 34);
-   border: 1px solid rgb(49, 49, 49);
-   border-radius: 50px;
-   margin: 0 18px;
-   padding: 0 30px 30px;
-   font-family: Roboto;
-   font-weight: normal;
-   color: white;
-
-   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
-}
-
 .special-info .payment ul {
    height: 100%;
    display: flex;
@@ -322,7 +310,7 @@ li h3 {
    position: relative;
    margin: auto;
    overflow: hidden;
-   border: 1px solid rgba(0, 0, 0, 0.548);
+   border: 1px solid rgba(46, 46, 46, 0.301);
    border-radius: 20px;
    margin-bottom: 36px;
    transition: 1s;
@@ -344,7 +332,7 @@ li h3 {
    width: auto;
    padding: 16px;
    margin-top: -22px;
-   color: white;
+   color: rgb(43, 43, 43);
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
@@ -361,7 +349,7 @@ li h3 {
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-   background-color: rgba(0, 0, 0, 0.8);
+   background-color: rgba(78, 78, 78, 0.8);
 }
 
 /* Caption text */
@@ -378,7 +366,7 @@ li h3 {
 
 /* Number text (1/3 etc) */
 .numbertext {
-   color: #f2f2f2;
+   color: rgb(43, 43, 43);
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
